--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -1,13 +1,17 @@
 // Colors
-$brand-primary: #397ab1;
-$grey: #dddddd;
-$light-grey: #f9f9f9;
-$dark-grey: #777777;
+$brand-primary: #2C3E50;
+$grey: #dee1e4;
+$light-grey: #e6e8eb;
+$dark-grey: #d6dade;
+$grey-: #dddddd;
+$light-grey-: #f9f9f9;
+$dark-grey-: #777777;
 
 // Body
-$body-background-color: #fafafa;
+$body-background-color: #f6f7f8;
 $body-default-color: #333333;
 $body-default-font-family: Helvetica, Arial, sans-serif;
+
 
 // Spacing
 $space: 1.4rem;
@@ -19,25 +23,25 @@ $base-font-size: 1.4rem;
 $large-font-size: 2.2rem;
 
 // Form inputs
-$input-border: $grey;
+$input-border: $grey-;
 $input-spacing: 1rem;
 
 // Boxed view
 $boxed-view-overlay-bg: $grey;
-$boxed-view-bg: white;
+$boxed-view-bg: $light-grey;
 $boxed-view-border-color: $grey;
 
 // Button
 $button-bg: $brand-primary;
 $button-color: white;
 $button-pill-color: $brand-primary;
-$button-secondary-bg: $light-grey;
-$button-secondary-color: $dark-grey;
-$button-secondary-border-color: $grey;
+$button-secondary-bg: $light-grey-;
+$button-secondary-color: $dark-grey-;
+$button-secondary-border-color: $grey-;
 
 // Header
 $header-bg: $brand-primary;
-$header-color: white;
+$header-color: $light-grey-;
 $header-height: 6rem;
 
 // Item
