--- a/imports/client/styles/_base.scss
+++ b/imports/client/styles/_base.scss
@@ -51,3 +51,8 @@ input:focus, input[type=email]:focus, input[type=password]:focus, textarea:focus
 *:focus {
     outline: none;
 }
+
+.shadow {
+  -moz-box-shadow: 0 0 1px 8px rgba(0,0,0,.3);
+  -webkit-box-shadow: 0 1px 8px rgba(0,0,0,.3);
+}
