--- a/imports/client/styles/_variables.scss
+++ b/imports/client/styles/_variables.scss
@@ -1,16 +1,17 @@
 // Colors
-$brand-primary: #2C3E50;
+$brand-primary: #db4437;
 $grey: #dee1e4;
 $light-grey: #e6e8eb;
 $dark-grey: #d6dade;
 $grey-: #dddddd;
 $light-grey-: #f9f9f9;
+$light-grey--: #cbcbcb;
 $dark-grey-: #777777;
 
 // Body
 $body-background-color: #f6f7f8;
 $body-default-color: #333333;
-$body-default-font-family: Helvetica, Arial, sans-serif;
+$body-default-font-family: Roboto, Helvetica, Arial, sans-serif;
 
 
 // Spacing
@@ -41,7 +42,7 @@ $button-secondary-border-color: $grey-;
 
 // Header
 $header-bg: $brand-primary;
-$header-color: $light-grey-;
+$header-color: white;
 $header-height: 6rem;
 
 // Item
