--- a/imports/client/styles/components/_item.scss
+++ b/imports/client/styles/components/_item.scss
@@ -13,6 +13,12 @@
   padding: $space;
 }
 
+.item-list__search {
+  display: flex;
+  flex-direction: column;
+  padding: 0px $space;
+}
+
 // Item
 .item {
   border-left: $item-border-width solid transparent;
